packages/wasm/ballerina-lang-go/parser/testdata/tokens/javainterop/negative/distinct_error/main.token
(import 6 0x00 ())
(ident, "testorg" 7 0x00 ())
(/ 1 0x00 ())
(ident, "distinct_error" 14 0x00 ())
(. 1 0x00 ())
(ident, "errors" 6 0x00 ())
(; 1 0x00 ())
(public 6 0x00 ())
(function 8 0x00 ())
(ident, "main" 4 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(int 3 0x00 ())
(| 1 0x00 ())
(ident, "errors" 6 0x00 ())
(: 1 0x00 ())
(ident, "DistinctError" 13 0x00 ())
(ident, "err" 3 0x00 ())
(= 1 0x00 ())
(ident, "errors" 6 0x00 ())
(: 1 0x00 ())
(ident, "returnDistinctErrorUnionWhichThrowsCheckedException" 51 0x00 ())
(( 1 0x00 ())
(int, "1" 1 0x00 ())
(, 1 0x00 ())
(string, ""DistinctError"" 15 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(2 0 0x00 ())
